# BigQuery-TechHub

./: .env  Cargo.toml  README.md
src/: big_query.rs  main.rs  model.rs
src/resources/: application.config
src/utility/: config.rs  env_vars.rs  mod.rs
