[package]
name = "big_query_tech_hub"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gcp-bigquery-client = "0.18.0"
hocon = "0.9.0"
serde = { version = "1.0.197", features = ["derive"] }
lazy_static = "1.4.0"
dotenv = "0.15.0"
tokio = { version = "1.0.0" }
yup-oauth2 = "8.3"
serde_json = "1.0.114"
log = "0.4.21"
env_logger = "0.11.3"